# battle-simulator

./: .gitattributes  .gitignore  README.md  TODO.md  _vite.js  api-server.js  package-lock.json  package.json
.claude/: settings.json
agents/: ApiAgent.js  HumanAgent.js  ObscuroAgent.js  cfr.js  index.js  obscuro.test.js  rollout.test.js
apps/: README.md
apps/android/: gradle.properties  local.properties  settings.gradle
apps/android/app/src/main/cpp/: CMakeLists.txt  node-bridge.cpp
apps/classic/: App.vue  index.html  package.json  vite.js
apps/design/: App.vue  AssetLayer.vue  Battlefield.jsx  Battlefield.vue  CLAUDE.md  Lobby.vue  SchematicLayer.vue  api.js  app.jsx  data.js  data.jsx  index.html  renderers.jsx  ui.jsx
apps/minimal/: App.vue  index.html  package.json  vite.js
apps/modern/: App.vue  (+3 more)
demo/: aow-demo.js  axisallies-demo.js  cardbattle-demo.js  chess-demo.js  civ1-demo.js  civ2-demo.js  combatmission-demo.js  cs-demo.js  doom-demo.js  ffta-demo.js  kdice-demo.js  mudandblood-demo.js  obscuro-demo.js  risk-demo.js  rogue-demo.js  sc1-demo.js  sc2-demo.js  tactical-demo.js  xcom-demo.js
engine/: ActionValidator.js  GameEngine.js  index.test.js
games/: evalHelpers.js  formatAction.js  types.js
interfaces/: types.js
test/: aow.test.js  axisallies.test.js  cardbattle.test.js  chess.test.js  civ1.test.js  civ2.test.js  combatmission.test.js  cs.test.js  doom.test.js  engine.test.js  ffta.test.js  kdice.test.js  mudandblood.test.js  risk.test.js  rogue.test.js  sc1.test.js  sc2.test.js  simcity.test.js  tactical.test.js  xcom.test.js
(+227 files in other folders)
